# research

./: .gitignore  README.md  notes.md  pyproject.toml
best_practices/: python.md
sample/: java.py  python.py
src/research/: agent.py  executor.py  explanation_generator.py  main.py  parser.py  state.py  workflow_generator.py
src/research/best_practices/: c#.md  c++.md  c.md  go.md  java.md  javascript.md  ruby.md
src/research/evaluation/: evaluation.py  repo_selector.py  result.md
src/research/langgraph/: builder.py  state.py
src/research/langgraph/nodes/: executor.py  explanation_generator.py  github_repo_parser.py  workflow_executor.py  workflow_generator.py  workflow_linter.py
src/research/log_output/: log.py
src/research/parsing/: linter_parser.py  workflow_log_parser.py
src/research/prompts/: yml_best_practices.py  yml_best_practices_prompt.py  yml_rule.py
src/research/sample/: java.py  python.py  sample.py
src/research/server/: __init__.py  github_api.py
src/research/tools/: action_lint.py  github.py  linter.py  llm.py  llm_factory.py  parser.py  rag.py
src/research/workflow_graph/: builder.py  state.py
src/research/workflow_graph/nodes/: explanation_generator.py  github_repo_parser.py  workflow_executor.py  workflow_generator.py  workflow_linter.py
tests/: test_github.py
